snapshots/care/data4life/hc-util-sdk-kmp/error/1.13.0-SNAPSHOT/error-1.13.0-20220822.093702-3-all.jar.sha256
495b6e8696b06f6f3408cdba11c60364162ad452ab603a1fd891eee7b4e7bea1